# MicVolumeService

./: .gitignore  CMakeLists.txt  CNAME  LICENSE  MICFixInstall.cpp  MICFixService.cpp  MICFixService.def  README.md  README_UA.md  build.bat  index.html  mic_volume_service.py  script.js  style.css
.github/workflows/: release.yml
docs/: index.html  script.js
src/: MICFixUninstall.cpp
